M87/force-app/main/default/objects/Log__e/fields/ExceptionTypeName__c.field-meta.xml
<CustomField>
    <fullName>ExceptionTypeName__c</fullName>
    <label>ExceptionTypeName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>