M87/force-app/main/default/objects/Log__e/fields/IsException__c.field-meta.xml
<CustomField>
    <fullName>IsException__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsException</label>
    <type>Checkbox</type>
</CustomField>