M87/force-app/main/default/objects/Log__e/fields/SourceClass__c.field-meta.xml
<CustomField>
    <fullName>SourceClass__c</fullName>
    <label>SourceClass</label>
    <length>255</length>
    <type>Text</type>
</CustomField>