M87/force-app/main/default/objects/Log__e/fields/SourceMethod__c.field-meta.xml
<CustomField>
    <fullName>SourceMethod__c</fullName>
    <label>SourceMethod</label>
    <length>255</length>
    <type>Text</type>
</CustomField>